Bug 353776 need the surrounding text support for some language input r=masayuki